# inmobiliary-data

./: .env.example  .env.local.example  .gitignore  DUPLICATE_DETECTION.md  README.md  apply_catalogos_migration.py  apply_duplicate_migration.py  backfill_duplicate_detection.py  backfill_location_normalization.py  db_config.py  duplicate_detector.py  eliminar_inicio_automatico.bat  import_db.bat  inmobiliary_db.sql  install.bat  location_normalizer.py  net_retry.py  package-lock.json  package.json  pnpm-lock.yaml  pyproject.toml  qweryConsulta.sql  registrar_inicio_automatico.bat  requirements.txt  run_bot.bat  scraper_amorel_pasto.py  scraper_audit.py  scraper_ciencuadras.py  scraper_common.py  scraper_facebook_marketplace.py  scraper_fincaraiz_pasto.py  scraper_metrocuadrado_pasto.py  seed_catalogos.py  start_front.bat  start_mysql.bat  start_sistema.bat  startup_InmobiliaryDataBot.bat  stop_mysql.bat  stop_sistema.bat
data/: pasto_barrios_veredas.tsv
database/: schema.sql  seed.sql
front/: .gitignore  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.tsbuildinfo
migrations/: 001_duplicate_detection.sql  001_duplicate_detection_down.sql  002_exact_image_hash.sql  003_catalogos_ubicacion_tipo.sql  003_catalogos_ubicacion_tipo_down.sql
public/: app.js  index.html  styles.css
scripts/: apply_catalogos_migration.py  apply_duplicate_migration.py  backfill_duplicate_detection.py  backfill_location_normalization.py  check.js  seed_catalogos.py
src/: cli.js  config.js  db.js  logger.js  server.js
tests/: test_duplicate_detector.py  test_net_retry.py  (+9 more)
(+75 files in other folders)
