[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "inmobiliary-data"
version = "0.1.0"
description = "Scrapers de inmuebles en venta en Pasto"
requires-python = ">=3.10"
dynamic = ["dependencies"]

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
# Sin esto, pytest no encuentra el paquete al correr desde la raiz.
pythonpath = ["src"]
testpaths = ["tests"]
